feat(api): implementación completa de la API base (repos, service, controllers, health, docker)

--- a/Api/Dockerfile
+++ b/Api/Dockerfile
@@ -10,12 +10,11 @@ RUN dotnet restore Api/Api.csproj
 # Copia todo el código fuente y compila
 COPY Api/. ./Api/
 WORKDIR /src/Api
-RUN dotnet publish -c Release -o /app/publish
+RUN dotnet publish Api.csproj -c Release -o /app/publish /p:UseAppHost=false
 
 # Etapa 2: runtime
 FROM mcr.microsoft.com/dotnet/aspnet:9.0 AS runtime
 WORKDIR /app
 COPY --from=build /app/publish ./
-ENV ASPNETCORE_URLS=http://+:8080
 EXPOSE 8080
 ENTRYPOINT ["dotnet", "Api.dll"]
