ci(github): agregar pipeline de build, test y docker

--- a/.dockerignore
+++ b/.dockerignore
@@ -5,3 +5,13 @@ data/
 .gitignore
 .vscode/
 .idea/
+bin/
+obj/
+.vscode/
+.git/
+.gitignore
+**/*.user
+**/*.suo
+**/*.Secrets
+Dockerfile
+docker-compose.override.yml
