--- a/Api/Api.csproj
+++ b/Api/Api.csproj
@@ -15,6 +15,7 @@
     </PackageReference>
     <PackageReference Include="Microsoft.Extensions.Diagnostics.HealthChecks.EntityFrameworkCore" Version="9.0.10" />
     <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="9.0.4" />
+    <PackageReference Include="Sentry.AspNetCore" Version="5.16.2" />
     <PackageReference Include="Serilog.AspNetCore" Version="9.0.0" />
     <PackageReference Include="Serilog.Sinks.Datadog.Logs" Version="0.6.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="9.0.3" />
