--- a/Api/Dockerfile
+++ b/Api/Dockerfile
@@ -1,22 +1,36 @@
-# ===== Build =====
+# ============================
+# STAGE 1: RESTORE + BUILD
+# ============================
 FROM mcr.microsoft.com/dotnet/sdk:9.0 AS build
 WORKDIR /src
 
 COPY *.sln ./
 COPY Api/*.csproj ./Api/
+
 RUN dotnet restore Api/Api.csproj
 
-COPY Api/. ./Api/
-WORKDIR /src/Api
-RUN dotnet publish Api.csproj -c Release -o /app/publish /p:UseAppHost=false
+COPY . .
 
-# ===== Runtime =====
+RUN dotnet build Api/Api.csproj -c Release -o /app/build
+
+# ============================
+# STAGE 2: PUBLISH
+# ============================
+FROM build AS publish
+RUN dotnet publish Api/Api.csproj -c Release -o /app/publish /p:UseAppHost=false
+
+# ============================
+# STAGE 3: RUNTIME
+# ============================
 FROM mcr.microsoft.com/dotnet/aspnet:9.0 AS final
 WORKDIR /app
-COPY --from=build /app/publish ./
+
+COPY --from=publish /app/publish .
 
 
-ENV ASPNETCORE_URLS=http://+:8080
+ENV ASPNETCORE_URLS=http://+:8080 \
+    DOTNET_EnableDiagnostics=0
+
 EXPOSE 8080
 
 ENTRYPOINT ["dotnet", "Api.dll"]
