--- a/docker-compose.example.yml
+++ b/docker-compose.example.yml
@@ -2,15 +2,13 @@ services:
   db:
     image: postgres:16
     container_name: notasapi_db
-    environment:
-      POSTGRES_DB: notasdb
-      POSTGRES_USER: notasuser
-      POSTGRES_PASSWORD: notassecret
+    env_file:
+    - .env.db
     ports: ["5432:5432"]
     volumes:
       - ./data/postgres:/var/lib/postgresql/data
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U notasuser -d notasdb"]
+      test: ["CMD-SHELL", "pg_isready -U $$POSTGRES_USER -d $$POSTGRES_DB"]
       interval: 10s
       timeout: 5s
       retries: 5
@@ -20,9 +18,10 @@ services:
       context: .
       dockerfile: Api/Dockerfile
     container_name: notasapi_api
+    env_file:
+    - .env.api  
     environment:
       ASPNETCORE_URLS: "http://+:8080"
-      ConnectionStrings__Default: "Host=db;Port=5432;Database=notasdb;Username=notasuser;Password=notassecret"
     depends_on:
       db:
         condition: service_healthy
